--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 		<version>2.0.2</version>
 	</parent>
 
-	<name>ManifoldCF - Connectors - Confluence Repository Connector</name>
+	<name>ManifoldCF - Connectors - Confluence Connector</name>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>mcf-confluence-repository-connector</artifactId>
+	<artifactId>mcf-confluence-connector</artifactId>
 	<packaging>jar</packaging>
 	
 	<url>http://maven.apache.org</url>
